@@ -115,6 +115,7 @@ COMMANDS:
 
 OPTIONS:
  -b|--backup=DIR UPGRADE - Backup packages before they are upgraded.
+ -f|--fast       SHOW - use apt-cache's version, due to its speed.
  -h|--help       Print usage message.
  -n|--noauth     Allow packages from unathenticated archives.
  -P|--pager      CHANGELOG - Use a pager for viewing the entire Debian changelog of a package.
