@@ -1,4 +1,4 @@
-Display Debian changelog for a given package.
+Display Debian changelog of a package.
 $ wajig changelog PKG
 options:
   -v --verbose=1    if there's newer entries, display them, and proceed to
